# airfri

./: .gitmodules  README.md
FRI11/include/: domain.cuh  fft.cuh  fiat-shamir.cuh  fri-gpu.cuh  fri.cuh
FRI11/src/: commit-launch-merkle.cu  fiat-shamir.cu  fri.cu  fri_inverses_256.txt  hash.cu  merkle.cu  poly.cu
FRI11/tests/: benchmark.py
FRI13_/include/: fri.cuh  hash-host.cuh  poly-eval-launch.cuh  poly.cuh
FRI13_/src/: commit-launch-merkle.cu  domain.cu  fft.cu  fiat-shamir.cu  merkle.cu
FRI14/include/: fri.cuh
FRI14/src/: commit-launch-merkle.cu  fri.cu  fri_gpu.cu  merkle_backup.cu
FRI15/include/: fri.cuh
FRI15/src/: commit-launch-merkle.cu  fri.cu  merkle.cu  params.cu
FRI192/: Makefile  README.md  fri
FRI192/cantor-fft/: .gitignore  .gitmodules  README.md
FRI192/cantor-fft/C/: Makefile  README.md  main.c
FRI192/cantor-fft/C++/: CMakeLists.txt  benchmark.cpp  benchmark_plot.py  main.cpp
FRI192/cantor-fft/C++/Cantor/: cantor_basis.hpp  fft.hpp  fft.tcc
FRI192/cantor-fft/C++/Gao/: fft.hpp  fft.tcc
FRI192/cantor-fft/C++/libiop/: fft.hpp  fft.tcc
FRI192/cantor-fft/C++/libiop/algebra/: field_subset.hpp  field_subset.tcc  subspace.hpp  utils.hpp
FRI192/cantor-fft/C++/utils/: utils.hpp  utils.tcc
FRI192/cantor-fft/C/cantor/: cantor_fft.c  cantor_fft.h  div_by_s_i.h  s_i.h
FRI192/cantor-fft/C/utils/: lch_api.c  lch_api.h  utils.c  utils.h
FRI192/cantor-fft/Sage/Cantor/: fft.sage  test.sage
FRI192/cantor-fft/Sage/Gao/: fft.sage  taylor.sage  test.sage
FRI192/cantor-fft/Sage/utils/: utils.sage
FRI192/cantor-fft/data_backup/: BM_cantor_additive_fft.csv  BM_cantor_additive_fft_precmp.csv  BM_gao_additive_fft_co.csv  BM_gao_additive_fft_co_lvl2.csv  BM_gao_additive_fft_lvl1.csv  BM_gao_additive_fft_lvl2.csv  BM_libiop_additive_fft.csv  BM_libiop_naive_fft.csv  Figure_1.eps  benchmark_output.csv  benchmark_output.json  terminal_output.txt
FRI192/cantor-fft/data_backup/Nov25_Laptop/: benchmark_output.json  benchmark_output_2_better_CV.json
FRI192/cantor-fft/data_backup/Oct14/: benchmark_output.json
FRI192/cantor-fft/data_backup/Oct15/: benchmark_output.json
FRI192/cantor-fft/data_backup/Oct7/: benchmark_output.json
FRI192/include/: commit-launch-merkle.cuh  commit_gpu.cuh  commit_launch_new.cuh  field.cuh  fri.cuh  merkle.cuh  params.cuh
FRI192/src/: Makefile  commit-launch-merkle.cu  commit_gpu.cu  commit_launch_new.cu  fft.cu  fiat-shamir.cu  fri.cu  fri_new.cu  hash-host.cu  hash.cu  merkle.cu  merkle_correct.cu
FRI192/tests/: hash_test.cu  input.txt  merkle_hashes_verification_results.txt  precomputed.cu  search_tree.cu  test_another_sha.cu  test_another_sha_gpu.cu  test_sha.cu  test_sha.cuh
FRI256/include/: commit-launch-merkle.cuh  commit_gpu.cuh  field.cuh  fri-gpu.cuh  fri.cuh  params.cuh
FRI256/src/: commit-launch-merkle.cu  commit_gpu.cu  fiat-shamir.cu  fri.cu  merkle.cu  merkle_backup.cu  params.cu  precompute_inverse.cu
FRI256/tests/: bench-script.sh
airfri192/: CMakeLists.txt  CMakeLists_old.txt  setup_and_build.sh
airfri192/benchmarks/: CMakeLists.txt
airfri192/docs/: CANTOR_SIMPLIFICATION.md  COMMIT_KERNEL_TODO.md  CURRENT_STATUS.md  FIELD_MULTIPLICATION_OPTIONS.md  POLY_EVAL_GUIDE.md  QUICK_REFERENCE.md  SIMPLIFICATION_SUMMARY.md  UNIFIED_FIELD_OPERATIONS.md  poly_eval_example.cpp  poly_eval_usage.md
airfri192/hash/: Makefile  hash.cu  hash.cuh  hash_host.cu  hash_host.cuh
airfri192/include/: commit_kernel.cuh  field.cuh  field_conversion.cuh  fri_utils.cuh  fs_transform.cuh  hash.cuh  hash_common.hpp  hash_host.cuh  merkle.cuh  poly_eval.cuh  prove.cuh  query.cuh  sample_indices.cuh  verify.cuh
airfri192/src/: commit_kernel.cu  field.cu  fri_utils.cu  fs_transform.cu  hash.cu  hash_common.cpp  hash_host.cu  merkle.cu  poly_eval.cu  poly_eval_host.cu  poly_eval_launch.cu  prove.cpp  prove.cu  query.cu  sample_indices.cu  verify.cu
airfri192/tests/: CMakeLists.txt  Makefile  test_fri  test_fri.cu
toy_example/include/: commit-launch-merkle.cuh  fri-gpu.cuh  fri.cuh  merkle.cuh
toy_example/src/: commit-launch-merkle.cu  fiat-shamir.cu  hash-host.cu  merkle.cu  unit-test-commit.cu  unit-test-merkle.cu
